# dvrk_stereo_viewer

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ros_ci.yml
scripts/: calibration  configurator
share/: decklink_gooviz.json  stereo_viewer.json  stereo_viewer_config.schema.json
src/common/: config.cpp  config.hpp
src/dvrk_display/: main_stereo.cpp  overlay.hpp
src/dvrk_stereo_viewer/: main.cpp  overlay.cpp  overlay.hpp
